force-app/main/default/objects/SVMXC__Service_Plan__c/SVMXC__Service_Plan__c.object-meta.xml
<CustomObject>
    <description>Service Plan is a template for creating service contract, it has all coverage information along with detail pricing terms.</description>
    <label>Service Plan</label>
    <nameField>
        <label>Service Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>