force-app/main/default/objects/SVMXC__Service_Plan__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>This custom object represents the External ID field for SAP Material reference.</description>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>