force-app/main/default/objects/SVMXC__Service_Plan__c/fields/Loaner_Included__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This entitles 100% discount on Loaner unit when entitling Cases and Work Orders with applicable Service Contract Line.</description>
    <label>Loaner Included</label>
    <type>Checkbox</type>
</CustomField>