force-app/main/default/objects/SVMXC__Service_Plan__c/fields/OQ_Required__c.field-meta.xml
<CustomField>
    <fullName>OQ_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify if OQ is required on entitlement.</description>
    <label>OQ Required</label>
    <type>Checkbox</type>
</CustomField>