force-app/main/default/objects/SVMXC__Service_Plan__c/fields/SVMXC__Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conveys whether the catalog is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>