force-app/main/default/objects/SVMXC__Service_Plan__c/fields/SVMXC__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Description__c</fullName>
    <description>Service Plan details</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>