force-app/main/default/objects/SVMXC__Service_Plan__c/fields/SVMXC__List_Price__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__List_Price__c</fullName>
    <description>Price for the contract coverage</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>