force-app/main/default/objects/SVMXC__Service_Plan__c/fields/SVMXC__SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SLA_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SLA term that is associated with the contract</description>
    <label>SLA Terms</label>
    <referenceTo>SVMXC__Service_Level__c</referenceTo>
    <relationshipName>Service_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>