force-app/main/default/objects/SVMXC__Service_Plan__c/listViews/SVMXC__All_Service_Plans.listView-meta.xml
<ListView>
    <fullName>SVMXC__All_Service_Plans</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Active__c</columns>
    <columns>SVMXC__Description__c</columns>
    <columns>SVMXC__List_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Plans</label>
    <language>en_US</language>
</ListView>